added builds scripts, build front using Docker